# KGG_CPP_Project_Repo

./: .gitignore  CMakeLists.txt  main.cpp  main.rs
Light/: Normal.cpp  Normal.h  Vector3f.cpp  Vector3f.h  light.cpp
Math/: Vector2.hpp  Vector4.hpp
Resources/Shaders/: shader.frag  shared.vert
Window/: Window.cpp  Window.h
src/Headers/: Button.hpp  Camera.h  Mesh.h  Render.h  Window.hpp  glad.h  shader.h
src/Main/: main.cpp
src/Main/Light/: Mesh.cpp  Normal.cpp  Render.cpp  shader.cpp
src/Main/Light/Scene/: Camera.cpp
src/Main/Math/: Vector2.hpp  Vector3.hpp  Vector4.hpp
src/Main/ReadWrite/: Reader.cpp  glad.txt
src/Main/Window/: Window.cpp
src/Main/Window/UI/: Button.cpp
